--- a/Education.html
+++ b/Education.html
@@ -24,7 +24,7 @@
             <div class="intro"> 
                 <center>
                     <p>
-                        I will be graduating from the College of Engineering at Cornell University in May 2022 with a B.S. in Computer Science and the Dyson Business Minor for Engineers. 
+                        I will be graduating from the College of Engineering at Cornell University in May 2022 with a B.S. in Computer Science and the Dyson Business Minor for Engineers (Overall GPA 3.706). 
                     </p>
                     <p> 
                         I will be graduating with a M.Eng in Engineering Management from Cornell University in December 2022 
@@ -34,9 +34,65 @@
                     </h3>
                 </center>
             </div>
-            <img class="arrow" id="downArrow" src="images/Arrow.svg" alt="Arrow">
-            <img class="arrow" id="downArrowHover" src="images/Arrow_Hover.svg" alt="Arrow">
+            <img class="arrow" id="down-education-arrow" src="images/Arrow.svg" alt="Arrow">
+            <img class="arrow" id="down-education-arrow-hover" src="images/Arrow_Hover.svg" alt="Arrow">
+
+            <div class="cards">
+
+                <div class="card mb-3 work" id="first-education-card">
+                    <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/Compsci.png" class="card-img" id="cornell-image" alt="...">
+
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                        <h5 class="card-title">Cornell University School of Computer Science</h5>
+                        <h6>Major Required Courses</h6>
+                        <p class="card-text">
+                            ENGRD 2110: Object Oriented Programming and Data Structures. Grade: A. <br>
+                            CS 2800: Discrete Structures. Grade: A- <br>
+                            CS 3110: Data Structures & Functional Programming. Grade: B+ <br> 
+                            CS 3420: Digital Systems. Grade: A <br> 
+                            CS 4410: Operating Systems. Grade: A- <br>
+                            CS 4820: Theory of Algorithms. Grade: B+ <br> 
+                        </p>    
+                        <h6>Computer Science Electives</h6>
+                        <p class="card-text">
+                            CS 4700: Foundations of Artificial Intelligence. Grade: A- <br>
+                            CS 4780: Machine Learning. Grade: B+ <br>
+                            CS 4670: Introduction to Computer Vision. Grade: A- <br>
+                            CS 3300: Data-Driven Web Applications. Grade: A <br>  
+                        </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 work">
+                    <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/Dyson.png" class="card-img" id="dyson-image" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                        <h5 class="card-title">Dyson Business Minor for Engineers</h5>
+                        <h6>Classes Taken</h6>
+                        <p class="card-text">
+                            ILRID 1700: Introduction to Organizations and Management. Grade: B+ <br>
+                            AEM 2210: Financial Accounting. Grade: A- <br>
+                            AEM 2241: Finance. Grade: B+ <br>
+                            AEM 4660: Market Dynamics, Computer Simulation and Modeling. Grade: A- <br>
+                            AEM 4120: Computational Methods for Management and Economics. Grade: B+ <br> 
+                        </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </body>
-    <script src="script.js"></script>
+    <script src="education-script.js"></script>
 </html>
