--- a/Work.html
+++ b/Work.html
@@ -33,10 +33,88 @@
                         Click below to learn more about my work! 
                     </h3>
                 </center>
+            </div> 
+            <img class="arrow" id="down-work-arrow" src="images/Arrow.svg" alt="Arrow">
+            <img class="arrow" id="down-work-arrow-hover" src="images/Arrow_Hover.svg" alt="Arrow">
+
+            <div class="cards"> 
+
+                <div class="card mb-3 work work-card" id="first-work-card">
+                    <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/Meta.png" class="card-img" id="meta-image" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                        <h5 class="card-title">Incoming Software Engineering Intern at Meta</h5>
+                        <h6>May 2022 - August 2022 (Bay Area, California)</h6>
+                        <p class="card-text"></p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 work work-card">
+                    <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/Facebook.gif" class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                        <h5 class="card-title">Software Engineering Intern at Facebook (now Meta)</h5>
+                        <h6>June 2021 - August 2021 (Remote)</h6>
+                        <p class="card-text">
+                            -Used GraphQL, Relay, and React to create an end-to-end flow on the Facebook Business Suite Platform to allow advertisers to request credit-limit increases.<br>
+                            -Participated in multiple brainstorming sessions with team's project manager and product designer to finalize the flow's design.<br>
+                            -Tested flow thoroughly to ensure consistency. <br>  
+                        </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 work work-card">
+                    <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/OSIsoft.png" class="card-img" id="osisoft-image" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                        <h5 class="card-title">Software Developer Intern at OSIsoft (now AVEVA)</h5>
+                        <h6>June 2020 - July 2020 (Remote)</h6>
+                        <p class="card-text">
+                            - Created a TypeScript API service that provided mock device data to allow features to work without completed real API class.<br>
+                            - Tested existing components thoroughly using the Jasmine Unit Testing Framework.<br>
+                            - Learned how to use the Agile Development Process to complete and deliver work.<br>
+                            - Used Azure DevOps to keep track of and document my progress. <br>
+                        </p>        
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 work work-card">
+                    <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="images/NYSCI.png" class="card-img" id="nysci-image" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                        <h5 class="card-title">Explainer at the New York Hall of Science</h5>
+                        <h6>June 2016 - Aug 2018 (Corona, NY)</h6>
+                        <p class="card-text">
+                            - Gave science demonstration to large audiences. <br>
+                            - Explained the exhibits to visitors of all ages, and taught young children. <br> 
+                            - Presented at and helped visitors during several Hall of Science events, such as the World Maker Faire. <br>
+                            - Worked with visitors to solve hands-on challenges at Design-Lab. <br>
+                            - Helped run coding workshop for elementary and middle school students. <br> 
+                        </p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
             </div>
-            <img class="arrow" id="downArrow" src="images/Arrow.svg" alt="Arrow">
-            <img class="arrow" id="downArrowHover" src="images/Arrow_Hover.svg" alt="Arrow">
         </div>
     </body>
-    <script src="script.js"></script>
+    <script src="work-script.js"></script>
 </html>
