added button appearance

--- a/Work.html
+++ b/Work.html
@@ -27,7 +27,7 @@
                         I have been a Software Engineering Intern at OSIsoft and Meta and have worked as an explainer at the New York Hall of Science
                     </p>
                     <p> 
-                        I will be returning to work as a Software Engineering Intern at Meta during the Summer of 2022
+                        I will be returning to work as a <b>Software Engineering Intern at Meta during the Summer of 2022</b>
                     </p>
                     <h3>
                         Click below to learn more about my work! 
@@ -37,7 +37,7 @@
             <img class="arrow" id="down-work-arrow" src="images/Arrow.svg" alt="Arrow">
             <img class="arrow" id="down-work-arrow-hover" src="images/Arrow_Hover.svg" alt="Arrow">
 
-            <div class="cards"> 
+            <div id="workCards" class="cards"> 
 
                 <div class="card mb-3 work work-card" id="first-work-card">
                     <div class="row no-gutters">
