--- a/Education.html
+++ b/Education.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark justify-content-center">
-            <ul class="nav ">
+            <ul class="nav">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Home Page</a>
                 </li>
@@ -24,20 +24,21 @@
             <div class="intro"> 
                 <center>
                     <p>
-                        I will be graduating from the College of Engineering at Cornell University in May 2022 with a B.S. in Computer Science and the Dyson Business Minor for Engineers (Overall GPA 3.706). 
+                        I will be graduating from the College of Engineering at Cornell University in May 2022 with a B.S. in Computer Science and the Dyson Business Minor for Engineers (Overall <b> GPA 3.706 </b>). 
                     </p>
                     <p> 
-                        I will be graduating with a M.Eng in Engineering Management from Cornell University in December 2022 
+                        I will be <b>graduating with a M.Eng in Engineering Management from Cornell University in December 2022 </b>
                     </p>
                     <h3>
                         Click below to learn more about what I have learned!
                     </h3>
                 </center>
             </div>
+           
             <img class="arrow" id="down-education-arrow" src="images/Arrow.svg" alt="Arrow">
             <img class="arrow" id="down-education-arrow-hover" src="images/Arrow_Hover.svg" alt="Arrow">
 
-            <div class="cards">
+            <div id="educationCards" class="cards">
 
                 <div class="card mb-3 work" id="first-education-card">
                     <div class="row no-gutters">
