--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-    <body>
+    <body onload="showText()">
         <nav class="navbar navbar-dark bg-dark justify-content-center">
             <ul class="nav ">
                 <li class="nav-item">
@@ -27,13 +27,11 @@
                 <h1>
                     I AM<br> ANISH NAVADA
                 </h1>
-                <p>
-                    A senior at Cornell University.<br>
-                    A Computer Science Major.<br>
-                    An Incoming Software Engineering Intern at Meta. 
-                </p>
+                <p id="l1" class="hide"> A senior at Cornell University. </p>
+                <p id="l2" class="hide"> A Computer Science Major. </p>
+                <p id="l3" class="hide"> An Incoming Software Engineering Intern at Meta. </p>
             </div>
-
         </div>
     </body>
+    <script src="home-script.js"></script>
 </html>
